# winhooker

./: CHANGELOG.md  LICENSE  README.md  pubspec.yaml  run.sh
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: winhooker.dart  winhooker_method_channel.dart  winhooker_platform_interface.dart
linux/: CMakeLists.txt  winhooker_plugin.cc
linux/include/winhooker/: winhooker_plugin.h
macos/: winhooker.podspec
macos/Classes/: WinhookerPlugin.swift
python_scripts/: initial_setup.sh  keyboardlogger.py  keyboardlogger.sh  mouselogger.py  mouselogger.sh  python4.sh
test/: winhooker_method_channel_test.dart  winhooker_test.dart
windows/: CMakeLists.txt  timestampp.h  winhooker_plugin.cpp  winhooker_plugin.h  winhooker_plugin_c_api.cpp
windows/include/winhooker/: winhooker_plugin_c_api.h
